--- a/asset/css/templates.css
+++ b/asset/css/templates.css
@@ -35,7 +35,7 @@
   position: absolute;
   top: 10px;
   right: 10px;
-  background: #cb6ce6;
+  background: #46d248;
   color: #fff;
   padding: 4px 8px;
   border-radius: 5px;
